--- a/Proyecto/templates/caso_practico_clasificacion.html
+++ b/Proyecto/templates/caso_practico_clasificacion.html
@@ -148,7 +148,7 @@
                             </div>
                             <div class="card-body d-flex flex-column justify-content-center">
                                 <p class="text-muted small">Muestra la precisión de las predicciones del modelo en el conjunto de prueba.</p>
-                                <div class="chart-container">
+                                <div class="chart-center">
                                     <img src="data:image/png;base64,{{ matriz_confusion_img }}" alt="Matriz de confusión" class="img-fluid rounded border">
                                 </div>
                             </div>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="card-body">
                                 <p class="text-muted small">Número de errores (actualizaciones de pesos) en cada época de entrenamiento.</p>
-                                <div class="chart-container">
+                                <div class="chart-center">
                                     <img src="data:image/png;base64,{{ errores_entrenamiento_img }}" alt="Errores de entrenamiento" class="img-fluid rounded border">
                                 </div>
                             </div>
