--- a/Proyecto/templates/regresion_logistica.html
+++ b/Proyecto/templates/regresion_logistica.html
@@ -238,7 +238,7 @@
                     <div class="col-lg-6 text-center mb-4">
                       <h6><i class="fas fa-table"></i> Matriz de Confusión</h6>
                       <p class="text-muted small">Muestra la precisión de las predicciones del modelo</p>
-                      <div class="chart-container">
+                      <div class="chart-center">
                         <img src="data:image/png;base64,{{ matriz_confusion_img }}" 
                              alt="Matriz de confusión" class="img-fluid rounded border">
                       </div>
@@ -249,7 +249,7 @@
                     <div class="col-lg-6 text-center mb-4">
                       <h6><i class="fas fa-chart-line"></i> Curva ROC</h6>
                       <p class="text-muted small">Evalúa el rendimiento del clasificador</p>
-                      <div class="chart-container">
+                      <div class="chart-center">
                         <img src="data:image/png;base64,{{ curva_roc_img }}" 
                              alt="Curva ROC" class="img-fluid rounded border">
                       </div>
