--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -62,6 +62,17 @@
       </ul>
     </div>
 
+    <!-- Aprendizaje por Refuerzo -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Aprendizaje por Refuerzo
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="{{ url_for('conceptos_refuerzo') }}">Conceptos básicos</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('caso_practico_refuerzo') }}">Caso práctico</a></li>
+      </ul>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </div>
 </div>
