--- a/Proyecto/templates/conceptos_refuerzo.html
+++ b/Proyecto/templates/conceptos_refuerzo.html
@@ -86,13 +86,9 @@
 
         <h4>Referencias</h4>
         <ul class="references-list">
-          <li>Aprende Machine Learning. (s.f.). <em>Aprendizaje por refuerzo</em>. Recuperado de https://www.aprendemachinelearning.com/aprendizaje-por-refuerzo/</li>
-          <li>Damavis. (s.f.). <em>Aprendizaje por refuerzo profundo: DQN</em>. Recuperado de https://blog.damavis.com/aprendizaje-por-refuerzo-profundo-dqn/</li>
-          <li>DataCamp. (s.f.). <em>Algoritmo de Aprendizaje por Refuerzo SARSA en Python: Una guía completa</em>. Recuperado de https://www.datacamp.com/es/tutorial/sarsa-reinforcement-learning-algorithm-in-python</li>
-          <li>Fundación Bankinter. (s.f.). <em>¿Qué es el Q-learning y cómo funciona?</em> Recuperado de https://www.fundacionbankinter.org/noticias/q-learning/</li>
-          <li>Salesforce. (s.f.). <em>Aprendizaje por refuerzo: lo que necesitas saber</em>. Recuperado de https://www.salesforce.com/agentforce/reinforcement-learning/</li>
-          <li>Tutorials Point. (s.f.). <em>Exploration and exploitation in machine learning</em>. Recuperado de https://www.tutorialspoint.com/machine_learning/machine_learning_exploitation_and_exploration.htm</li>
-          <li>UpGrad. (s.f.). <em>Exploration and exploitation in machine learning: A deep dive into optimization techniques</em>. Recuperado de https://www.upgrad.com/tutorials/ai-ml/machine-learning-tutorial/exploration-and-exploitation-in-machine-learning/</li>
+          <li>Sutton, R. S., & Barto, A. G. (2018). <em>Reinforcement learning: An introduction</em> (2nd ed.). MIT Press. https://mitpress.mit.edu/9780262039246/reinforcement-learning/</li>
+          <li>Mnih, V., Kavukcuoglu, K., Silver, D., Rusu, A. A., Veness, J., Bellemare, M. G., Graves, A., Riedmiller, M., Fidjeland, A. K., Ostrovski, G., Petersen, S., Beattie, C., Sadik, A., Antonoglou, I., King, H., Kumaran, D., Wierstra, D., Legg, S., & Hassabis, D. (2015). Human-level control through deep reinforcement learning. <em>Nature</em>, 518(7540), 529–533. https://doi.org/10.1038/nature14236</li>
+          <li>Watkins, C. J. C. H., & Dayan, P. (1992). Q-learning. <em>Machine Learning</em>, 8(3), 279–292. https://doi.org/10.1007/BF00992698</li>
         </ul>
       </div>
       <a href="{{ url_for('index') }}" class="btn btn-outline-light mt-3">Volver al menú principal</a>
