--- a/Proyecto/templates/caso_practico_refuerzo.html
+++ b/Proyecto/templates/caso_practico_refuerzo.html
@@ -185,13 +185,13 @@
           </div>
           <div class="col-md-3">
             <div class="metric-card text-center">
-              <div class="metric-value">{{ "%.2f"|format(mean_length) }}</div>
+              <div class="metric-value">{{ "%.2f"|format(mean_steps or 0) }}</div>
               <div class="metric-label">Pasos Promedio</div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="metric-card text-center">
-              <div class="metric-value">{{ q_table_size }}</div>
+              <div class="metric-value">{{ states_explored or 0 }}</div>
               <div class="metric-label">Estados Explorados</div>
             </div>
           </div>
